[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/ballorange2_greeneye.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ballorange3_greeneye.png" type="Texture" id=2]
[ext_resource path="res://Music and Sounds/Farm_Game_Loop_Mechanical_Engine_Tractor_Start_Drive_Garden_Machine_Idle_Hum_2_Deep_Tank.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/ballorange4_greeneye.png" type="Texture" id=4]
[ext_resource path="res://World/SpinningBot1.gd" type="Script" id=5]
[ext_resource path="res://Enemies/ballorange1_greeneye.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/DIVA_Oh_No_C_124BPM.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 16.0

[sub_resource type="CircleShape2D" id=11]
radius = 192.51

[sub_resource type="CircleShape2D" id=16]
radius = 17.1172

[node name="SpinningBot1" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Buzz" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0
pitch_scale = 2.8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 11 )

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 16 )

[node name="Ohno" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0
pitch_scale = 1.5

[node name="Timer4" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
